--- a/package.json
+++ b/package.json
@@ -10,14 +10,26 @@
   },
   "dependencies": {
     "antd": "^5.24.8",
+    "bcryptjs": "^3.0.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
+    "express": "^5.1.0",
+    "fs": "^0.0.1-security",
     "js-cookie": "^3.0.5",
+    "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
+    "mongoose": "^8.14.1",
+    "multer": "^1.4.5-lts.2",
     "next": "15.3.1",
+    "nprogress": "^0.2.0",
+    "path": "^0.12.7",
     "react": "^19.0.0",
     "react-bootstrap-icons": "^1.11.5",
     "react-dom": "^19.0.0",
     "react-helmet": "^6.1.0",
     "react-icons": "^5.5.0",
+    "react-quill-new": "^3.4.6",
+    "sharp": "^0.34.1",
     "swiper": "^11.2.6"
   },
   "devDependencies": {
